# job_application_agent

./: .cursor_profile_capture.txt  .cursor_profile_capture_after_fix.txt  .dockerignore  .env  .gitignore  .railwayignore  ADZUNA_3_BUTTON_FLOW.md  ADZUNA_3_BUTTON_FLOW_COMPLETE.md  ADZUNA_COMPLETE.md  ADZUNA_DEJOBS_COMPLETE.md  ADZUNA_FIXES_APPLIED.md  ADZUNA_SUPPORT_ADDED.md  AGENT_HANGING_FIX.md  BATCH_VNC_COMPLETE.md  BETA_ACCESS_QUICKSTART.md  BETA_ACCESS_SYSTEM.md  BETA_FIX_SUMMARY.md  BETA_TESTING_COST_BREAKDOWN.md  COMPLETE_VNC_SOLUTION.md  CRITICAL_API_KEY_ROTATION_REQUIRED.md  DEFINITIVE_ANSWER.md  DEPLOYMENT_CHECKLIST.md  DROPDOWN_FIXES.md  DROPDOWN_FIXES_COMPLETE.md  DROPDOWN_SELECTOR_FIX.md  Dockerfile  Dockerfile.vnc  EMAIL_MIGRATION_SUMMARY.md  EMAIL_RAILWAY_FIX.md  EMAIL_VERIFICATION_SETUP.md  FAST_DROPDOWN_STRATEGY_V2.md  FINAL_BATCH_VNC_SUMMARY.md  FIXES_AND_IMPROVEMENTS.md  FREE_TIER_DEPLOYMENT_GUIDE.md  GOOGLE_API_SETUP.md  IMPLEMENTATION_COMPLETE.md  IP_RATE_LIMITING_README.md  JOB_SEARCH_SETUP.md  LICENSE  MANIFEST.in  (+112 more)
.claude/: settings.local.json
Agents/: DEBUG_COPY_GEMINI_PROMPTS.md  __init__.py  action_replay_interface.py  agent_profile_service.py  apply_systematic_tailoring.py  cover_letter_tailoring.py  fill_debug_reporter.py  gemini_compat.py  gemini_key_manager.py  gemini_prompt_response_debug.py  gemini_query_optimizer.py  gemini_rate_limiter.py  hidden_browser_manager.py  improved_char_calc.py  integration_patch.py  job_api_adapters.py  job_application_agent.py  job_application_agent_backup.py  job_application_agent_debug_prompts.py  job_application_agent_test.py  job_discovery_agent.py  job_relevance_scorer.py  jobspy_adapter.py  latex_tailoring_agent.py  mimikree_cache.py  mimikree_integration.py  multi_source_job_discovery_agent.py  persistent_browser_manager.py  proxy_manager.py  resume_browser_state.py  resume_hidden.py  resume_keyword_extractor.py  resume_tailoring_agent.py  resume_tailoring_agent.py.backup  resume_tailoring_with_mimikree.py  space_borrowing.py  systematic_resume_tailoring.py  systematic_tailoring_complete.py  test_systematic_tailoring.py
Agents/bullet_generation/: __init__.py  project_bullet_generator.py
Agents/components/: __init__.py  action_recorder.py  custom_exceptions.py  human_fill_tracker.py  pattern_recorder.py  user_override_profiler.py  user_pattern_recorder.py
Agents/project_selection/: __init__.py  mimikree_project_discovery.py  relevance_engine.py
Agents/validation/: __init__.py  hallucination_detector.py  semantic_validator.py
Cache/mimikree/: mimikree_180f16998a02.json  mimikree_4d117b95733f.json  mimikree_f24d7c0a6a6f.json
ProfileBuilder/: profile_data.json
Resumes/: annotated_resume_5bdb2b82.txt  annotated_resume_6118d7c6.txt  annotated_resume_bf04d8c0.txt  metadata_debug_024f1548.json  metadata_debug_133290a4.json  metadata_debug_13a04f09.json  metadata_debug_1ca66b26.json  metadata_debug_20eee8cf.json  metadata_debug_2b621a3d.json  metadata_debug_380b0d0b.json  metadata_debug_39e1d401.json  metadata_debug_3fdf4173.json  metadata_debug_41ae7b38.json  metadata_debug_44cd95d3.json  metadata_debug_45acbcc6.json  metadata_debug_4ee71a30.json  metadata_debug_50bff487.json  metadata_debug_5d45cca8.json  metadata_debug_67d3f1ed.json  metadata_debug_692bcae9.json  metadata_debug_6bcb6e22.json  metadata_debug_6f41d564.json  metadata_debug_74900d36.json  metadata_debug_83d8456e.json  metadata_debug_8da77fec.json  metadata_debug_97d2fc82.json  metadata_debug_9c2e44a9.json  metadata_debug_9fe14685.json  metadata_debug_a1cb1b5a.json  metadata_debug_c1ad9bfe.json  metadata_debug_c32488f1.json  metadata_debug_c7cfe5cf.json  metadata_debug_ccfbe857.json  metadata_debug_da5a5706.json  metadata_debug_dcfd7363.json  metadata_debug_e7bb8cb1.json  mimikree_data_00cde3fd.txt  mimikree_data_01d5a8e3.txt  mimikree_data_0cda08ed.txt  mimikree_data_4133acc7.txt  (+12 more)
Testing/: QUICK_START.md  README.md  UUID_FIX_SUMMARY.md  automated_metrics_extractor.py  failure_analysis.csv  job_board_performance.csv  list_users.py  resume_metrics_summary.py  run_agent_with_tracking.py  run_single_test.py  test_bug_bounty_helpers.py  test_metrics_tracker.py  test_question_extractor.py  test_results_main.csv  test_runner.py  time_analysis.csv
launchway/: __init__.py  __main__.py  agent_bootstrap.py  api_client.py  config.py  postinstall.py  session.py
launchway/cli/: agent.py  utils.py
launchway/encrypted_agents/: __init__.enc  agent_profile_service.enc  cover_letter_tailoring.enc  fill_debug_reporter.enc  gemini_compat.enc  gemini_key_manager.enc  gemini_prompt_response_debug.enc  gemini_query_optimizer.enc  gemini_rate_limiter.enc  hidden_browser_manager.enc  improved_char_calc.enc  job_api_adapters.enc  job_application_agent.enc  job_application_agent_debug_prompts.enc  job_relevance_scorer.enc  jobspy_adapter.enc  key_fingerprint.txt  latex_tailoring_agent.enc  mimikree_cache.enc  mimikree_integration.enc  multi_source_job_discovery_agent.enc  persistent_browser_manager.enc  proxy_manager.enc  resume_keyword_extractor.enc  resume_tailoring_agent.enc  space_borrowing.enc  systematic_tailoring_complete.enc
migrations/: check_profile_data.py  copy_profile_auto.py  copy_profile_simple.py  copy_profile_to_user.py  migrate_user_profiles_to_uuid.py  migrate_user_profiles_to_uuid_auto.py  migrate_user_profiles_to_uuid_fixed.py  show_users_with_profiles.py  test_profile_load.py
scripts/: encrypt_agents.py
server/: api_server.py  app.py  auth.py  backup_manager.py  batch_vnc_manager.py  bug_bounty.py  check_email_config.py  database_optimizer.py  dev_browser_session.py  email_service.py  google_oauth_service.py  health_monitor.py  job_handlers.py  job_queue.py  job_search_service.py  migrate_add_email_verification.py  mimikree_service.py  profile_service.py  profile_strength.py  rate_limiter.py  resource_manager.py  security_manager.py  system_initializer.py  test_email.py  token.json  vnc_api_endpoints.py  vnc_connection_pool.py  vnc_socketio_handler.py  vnc_stream_proxy.py  vnc_websocket_proxy.py
server/routes/: __init__.py  auth.py  (+13 more)
(+163 files in other folders)
