[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

# ─── Package metadata ────────────────────────────────────────────────────────

[project]
name        = "launchway"
version     = "0.1.0"
description = "AI-powered job application automation — tailor resumes, find jobs, apply autonomously."
readme      = "README.md"
requires-python = ">=3.11"
license     = { text = "MIT" }

keywords = ["job-search", "resume", "automation", "cli", "ai", "playwright"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]

# ─── CLI dependencies only ───────────────────────────────────────────────────

dependencies = [
    # Database
    "SQLAlchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.12.0",

    # Security
    "bcrypt>=4.0.0",
    "cryptography>=41.0.0",

    # Google AI / Gemini
    "google-genai",
    "google-generativeai>=0.3.0",
    "google-auth>=2.23.0",
    "google-auth-oauthlib>=1.1.0",
    "google-auth-httplib2>=0.1.1",
    "google-api-python-client>=2.100.0",

    # HTTP / scraping
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",

    # Browser automation
    "playwright>=1.40.0",

    # Data
    "pandas>=2.1.0",
    "numpy>=1.25.0",
    "Pillow",
    "PyPDF2>=3.0.0",

    # Config / utilities
    "python-dotenv>=1.0.0",
    "python-dateutil>=2.8.2",
    "loguru",
]

[project.optional-dependencies]
server = [
    "Flask>=2.3.0",
    "Flask-CORS>=4.0.0",
    "waitress>=2.1.2",
    "PyJWT>=2.8.0",
    "flask-talisman>=1.1.0",
    "redis>=4.6.0",
    "hiredis>=2.2.0",
    "schedule>=1.2.0",
    "boto3>=1.28.0",
    "botocore>=1.31.0",
    "sentry-sdk[flask]>=1.38.0",
    "prometheus-client>=0.19.0",
    "marshmallow>=3.20.0",
    "bleach>=6.0.0",
    "limits>=3.6.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.9.0",
    "flake8>=6.1.0",
]

# ─── Entry point ─────────────────────────────────────────────────────────────

[project.scripts]
launchway = "launchway.cli.agent:main"

# ─── Package discovery ───────────────────────────────────────────────────────

[tool.setuptools.packages.find]
where   = ["."]
include = ["launchway*", "Agents*"]
exclude = ["server*", "Website*", "tests*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.txt"]

# ─── Post-install: Playwright browsers ───────────────────────────────────────
# NOTE: Playwright browsers are installed automatically on first run via
# launchway/postinstall.py. If you want to install them manually, run:
#   python -m playwright install chromium

# ─── Tool configuration ──────────────────────────────────────────────────────

[tool.black]
line-length    = 100
target-version = ["py311"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
