[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# ─── Package metadata ────────────────────────────────────────────────────────

[project]
name        = "launchway"
version     = "0.2.33"
description = "AI-powered job application automation — tailor resumes, find jobs, apply autonomously."
readme      = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]

authors = [
    { name = "Launchway", email = "noreply@tailor-mycareer.online" }
]

keywords = ["job-search", "resume", "automation", "cli", "ai", "playwright"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
]

# ─── Dependencies ────────────────────────────────────────────────────────────

dependencies = [
    # HTTP — CLI↔server communication
    "requests>=2.31.0",

    # AES decryption of the encrypted agents bundle (agent_bootstrap.py)
    "cryptography>=41.0.0",

    # Config / utilities
    "python-dotenv>=1.0.0",
    "loguru",

    # Runtime DB access used by decrypted local agent components
    "SQLAlchemy>=2.0.0",
    # ── Local agent runtime dependencies ─────────────────────────────────────
    # These are needed because agents run locally on the user's machine after
    # the encrypted bundle is decrypted.

    # Browser automation (headful, persistent profiles)
    "playwright>=1.40.0",

    # Google Generative AI (Gemini for field mapping, resume tailoring, etc.)
    "google-genai>=1.0.0",

    # Google OAuth / Drive / Docs (for resume tailoring via Google Docs)
    "google-auth>=2.23.0",
    "google-auth-oauthlib>=1.1.0",
    "google-auth-httplib2>=0.1.1",
    "google-api-python-client>=2.100.0",

    # Job scraping / parsing
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "python-jobspy>=0.25.0",

    # Data processing
    "pandas>=2.1.0",
    "numpy>=1.25.0",

    # PDF / document handling
    "PyPDF2>=3.0.0",
    "Pillow>=10.0.0",

    # Date utilities
    "python-dateutil>=2.8.2",
]

# ─── Optional extras ─────────────────────────────────────────────────────────

[project.optional-dependencies]
server = [
    # Database (server-side only — CLI users do not need direct DB access)
    "SQLAlchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.12.0",
    # Auth helpers used by server
    "bcrypt>=4.0.0",
    "cryptography>=41.0.0",
    # Web framework
    "Flask>=2.3.0",
    "Flask-CORS>=4.0.0",
    "waitress>=2.1.2",
    "PyJWT>=2.8.0",
    "flask-talisman>=1.1.0",
    "redis>=4.6.0",
    "hiredis>=2.2.0",
    "schedule>=1.2.0",
    "boto3>=1.28.0",
    "botocore>=1.31.0",
    "sentry-sdk[flask]>=1.38.0",
    "prometheus-client>=0.19.0",
    "marshmallow>=3.20.0",
    "bleach>=6.0.0",
    "limits>=3.6.0",
    # Resume file parsing (PDF already covered by PyPDF2 in main deps)
    "python-docx>=1.1.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.9.0",
    "flake8>=6.1.0",
]

# ─── Entry point ─────────────────────────────────────────────────────────────

[project.scripts]
launchway = "launchway.cli.agent:main"

# ─── URLs — must come after all [project] keys in TOML ───────────────────────

[project.urls]
Homepage      = "https://launchway.app"
Documentation = "https://launchway.app/docs"
Repository    = "https://github.com/launchway/launchway"
"Bug Tracker" = "https://github.com/launchway/launchway/issues"

# ─── Package discovery ───────────────────────────────────────────────────────

[tool.setuptools.packages.find]
where   = ["."]
include = ["launchway*"]
exclude = ["server*", "Website*", "tests*", "Testing*", "Agents*"]

[tool.setuptools.package-data]
"launchway" = [
    "*.yaml",
    "*.txt",
    "encrypted_agents/**/*.enc",    # encrypted agent blobs — decrypted at runtime
    "encrypted_agents/*.txt",       # non-secret metadata (e.g. key fingerprint)
    "encrypted_support/*.enc",      # encrypted support files (credentials.json, etc.)
]

[tool.setuptools.exclude-package-data]
"*" = ["token.json", "credentials.json", "*_token.json", "*_credentials.json", ".env", ".env.*"]

# ─── Post-install: Playwright browsers ───────────────────────────────────────
# NOTE: Playwright browsers are installed automatically on first run via
# launchway/postinstall.py. If you want to install them manually, run:
#   python -m playwright install chromium

# ─── Tool configuration ──────────────────────────────────────────────────────

[tool.black]
line-length    = 100
target-version = ["py311"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]

